--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,9 +10,9 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/Dungen.Client/bin/Debug/net6.0/Dungen.Client.dll",
+            "program": "${workspaceFolder}/Daedalus.Client/bin/Debug/net6.0/Daedalus.Client.dll",
             "args": [],
-            "cwd": "${workspaceFolder}/Dungen.Client",
+            "cwd": "${workspaceFolder}/Daedalus.Client",
             // For more information about the 'console' field, see https://aka.ms/VSCode-CS-LaunchJson-Console
             "console": "internalConsole",
             "stopAtEntry": false
