--- a/src/Daedalus.Core.Tiled/Daedalus.Core.Tiled.csproj
+++ b/src/Daedalus.Core.Tiled/Daedalus.Core.Tiled.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="System.IO.Abstractions" Version="20.0.28" />
+
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+        <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
 </Project>
