--- a/src/Daedalus.Core.Tiled/Daedalus.Core.Tiled.csproj
+++ b/src/Daedalus.Core.Tiled/Daedalus.Core.Tiled.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dungen" Version="1.0.16" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
+    <PackageReference Include="GraphToGrid" Version="1.0.0" />
+    <PackageReference Include="MemoryPack" Version="1.21.1" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="System.IO.Abstractions" Version="20.0.28" />
 
