--- a/src/Daedalus.Core/Daedalus.Core.csproj
+++ b/src/Daedalus.Core/Daedalus.Core.csproj
@@ -11,8 +11,8 @@
     <PackageReference Include="LiteNetLib" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="MonoGame.Extended" Version="4.0.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.666-develop" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.666-develop" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
     <PackageReference Include="Stateless" Version="5.16.0" />
   </ItemGroup>
   <ItemGroup>
