--- a/src/Daedalus.Game.Client/Daedalus.Game.Client.csproj
+++ b/src/Daedalus.Game.Client/Daedalus.Game.Client.csproj
@@ -22,8 +22,8 @@
     <PackageReference Include="LiteNetLib" Version="1.2.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.666-develop" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.666-develop" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.2.1105" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.2.1105" />
     <PackageReference Include="System.IO.Abstractions" Version="21.0.2" />
   </ItemGroup>
   <ItemGroup>
